--- a/index.html
+++ b/index.html
@@ -92,19 +92,20 @@
 
 <div class="content">
     <div id="abs">
-        <h1>Learning Joint Latent Space EBM Prior Model for Multi-layer Generator</h1>
-        <div class="authors"><a href="mailto:jcui7@stevens.edu">Jiali Cui</a><sup>1</sup>, <a
-                href="http://www.stat.ucla.edu/~ywu/">Ying Nian Wu</a><sup>2</sup>, <a href="https://thanacademic.github.io/">Tian
-            Han</a><sup>1</sup>,
+        <h1>ShaLa: Multimodal Shared Latent Space Modelling</h1>
+        <div class="authors"><a href="mailto:jcui7@stevens.edu">Jiali Cui</a><sup>1</sup>, 
+            <a href="mailto:yan-ying.chen@tri.global">Yan-Ying Chen</a><sup>2</sup>, 
+            <a href="mailto:yanxia.zhang@tri.global">Yanxia Zhang</a><sup>2</sup>, 
+            <a href="mailto:matt.klenk@tri.global">Matthew Klenk</a><sup>2</sup>
         </div>
         <div class="inst">
             <sup>1</sup> Stevens Institute of Technology, SIT<br>
-            <sup>2</sup> University of California, Los Angeles, UCLA<br>
+            <sup>2</sup> Toyota Research Institute, TRI<br>
         </div>
 
-        <div id="links">
+        <!-- <div id="links"> -->
             <!-- Arxiv PDF link -->
-            <span class="link-block", style="margin-right: 40px">
+            <!-- <span class="link-block", style="margin-right: 40px">
                 <a href="static/pdfs/Cui_Learning_Joint_Latent_Space_EBM_Prior_Model_for_Multi-Layer_Generator_CVPR_2023_paper.pdf" target="_blank"
                    class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
@@ -112,41 +113,41 @@
                 </span>
                 <span>Paper</span>
               </a>
-          </span>
+            </span> -->
 
             <!-- Supplementary PDF link -->
-            <span class="link-block", style="margin-right: 40px">
+            <!-- <span class="link-block", style="margin-right: 40px">
               <a href="static/pdfs/Cui_Learning_Joint_Latent_CVPR_2023_supplemental.pdf" target="_blank"
                  class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <i class="fas fa-file-pdf"></i>
               </span>
               <span>Supplementary</span>
-            </a>
-          </span>
+                </a>
+            </span> -->
 
             <!-- Github link -->
-            <span class="link-block", style="margin-right: 40px">
+            <!-- <span class="link-block", style="margin-right: 40px">
             <a href="https://github.com/jcui1224/hierarchical-joint-ebm" target="_blank"
                class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
               <i class="fab fa-github"></i>
             </span>
             <span>Code</span>
-          </a>
-        </span>
+            </a>
+            </span> -->
 
             <!-- ArXiv abstract Link -->
-            <span class="link-block", style="margin-right: 40px">
+            <!-- <span class="link-block", style="margin-right: 40px">
           <a href="https://arxiv.org/abs/2306.06323" target="_blank"
              class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <i class="fas fa-file-pdf"></i>
               </span>
-          <span>ArXiv</span>
-        </a>
-      </span>
-        </div>
+          <span>ArXiv</span> -->
+        <!-- </a>
+        </span>
+        </div> -->
 
         <h2>Abstract</h2>
         <p> This paper studies the fundamental problem of learning multi-layer generator models. The multi-layer
@@ -166,7 +167,7 @@
     </div>
 
     <hr>
-    <pre class="bib">
+    <!-- <pre class="bib">
     @InProceedings{Cui_2023_CVPR,
         author    = {Cui, Jiali and Wu, Ying Nian and Han, Tian},
         title     = {Learning Joint Latent Space EBM Prior Model for Multi-Layer Generator},
@@ -175,13 +176,13 @@
         year      = {2023},
         pages     = {3603-3612}
     }
-    </pre>
+    </pre> -->
     <hr>
 
-    <div class="container">
+    <!-- <div class="container">
         <h2 class="title">Poster</h2>
         <iframe src="static/pdfs/CVPR2023_Poster.pdf" width="100%" height="900"></iframe>
-    </div>
+    </div> -->
     <hr>
 </div>
 <!--<section class="hero is-small is-light">-->
